--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
     <p style="line-height:1.7;color:#374151;margin-top:1rem;">As a software-focused company, Black Knight generates a significant portion of its revenue from long-term client relationships and recurring contracts. This revenue structure is common among software firms and can contribute to more predictable cash flows and relatively stable profit margins over time (Kopp, 2025).</p>
 
-    <p style="line-height:1.7;color:#374151;margin-top:1rem;">From a financial reporting perspective, Black Knight’s balance sheet reflects the characteristics of an intangible-asset-driven business. Investments in proprietary software and data assets make up a meaningful portion of the company’s asset base, which can influence traditional efficiency ratios such as total asset turnover. As a result, these ratios should be interpreted within the context of the firm’s software-based operating model <span class="citation" data-cite="Black Knight, Inc. Form 10-K (2023); Investopedia — Asset Turnover Ratio">³</span>.</p>
+    <p style="line-height:1.7;color:#374151;margin-top:1rem;">From a financial reporting perspective, Black Knight’s balance sheet reflects the characteristics of an intangible-asset-driven business. Investments in proprietary software and data assets make up a meaningful portion of the company’s asset base, which can influence traditional efficiency ratios such as total asset turnover. As a result, these ratios should be interpreted within the context of the firm’s software-based operating model (Black Knight, Inc., 2023;Investopedia, n.d.-a).</p>
   </div>
 </section>
 
@@ -489,7 +489,7 @@
   <div class="analysis-grid">
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Liquidity Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Black Knight’s (BKI) liquidity profile indicates a tighter short-term financial position than that of the Software & Programming industry, which has an average current ratio of 1.96. Although BKI’s current ratio of 1.27 exceeds the minimum threshold of 1.0, it is still significantly lower than the industry average(Black Knight, Inc., 2023). This indicates a limited buffer of current assets compared to short-term liabilities and highlights the company's relative liquidity position and potential vulnerabilities.
+      <p style="line-height:1.7;color:#374151;">Black Knight’s (BKI) liquidity profile indicates a tighter short-term financial position than that of the Software & Programming industry, which has an average current ratio of 1.96. Although BKI’s current ratio of 1.27 exceeds the minimum threshold of 1.0, it is still significantly lower than the industry average (Black Knight, Inc., 2023). This indicates a limited buffer of current assets compared to short-term liabilities and highlights the company's relative liquidity position and potential vulnerabilities.
       <p style="margin-bottom:1.25rem;">
       <p style="line-height:1.7;color:#374151;">The company’s quick ratio of 0.76 further reinforces this concern. Unlike the current ratio, the quick ratio excludes less liquid assets and provides a more conservative view of liquidity (Brooks, 2019). BKI’s quick ratio is not only below the industry average of 1.76, but also below 1.0, indicating that the firm cannot fully cover short-term obligations using its most liquid assets alone. As a result, BKI appears more reliant on continued operating cash flows rather than readily available liquidity to meet near-term commitments.
       <p style="margin-bottom:1.25rem;">
@@ -508,7 +508,7 @@
 
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Efficiency Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Black Knight’s efficiency ratios present a mixed picture of its operational performance. On the positive side, the company has a receivables turnover of 8.02, which exceeds the industry average of 6.80. This indicates that Black Knight collects customer payments more quickly than many of its peers, reflecting effective credit management practices and leading to stronger operating cash flows. This advantage helps to partially offset the company's weaker liquidity metrics (Black Knight, Inc., 2023)."</p>
+      <p style="line-height:1.7;color:#374151;">Black Knight’s efficiency ratios present a mixed picture of its operational performance. On the positive side, the company has a receivables turnover of 8.02, which exceeds the industry average of 6.80. This indicates that Black Knight collects customer payments more quickly than many of its peers, reflecting effective credit management practices and leading to stronger operating cash flows. This advantage helps to partially offset the company's weaker liquidity metrics (Black Knight, Inc., 2023).</p>
      <p style="margin-bottom:1.25rem;">
       <p style="line-height:1.7;color:#374151;">On the downside, Black Knight’s total asset turnover stands at 0.27, significantly below the industry average of 0.80. This suggests that the company generates substantially less revenue per dollar of assets than comparable firms. Such low asset utilization may raise concerns among stakeholders regarding the company's growth prospects, emphasizing the need for efficiency improvements to enhance future performance and returns.</p>
       <p style="margin-bottom:1.25rem;">
@@ -521,7 +521,7 @@
       <p style="margin-bottom:1.25rem;">
       <p style="line-height:1.7;color:#374151;">However, this strong profit margin doesn't mean that Black Knight gives better overall returns. Its return on assets (ROA) is 8%, which is lower than the industry average of 12%. This difference shows that the company is not using its assets efficiently and has a high level of assets. The return on equity (ROE) is 18%, which is also below the industry average of 25% (Black Knight, Inc., 2023). This means shareholders get lower returns compared to those in similar companies.</p>
       <p style="margin-bottom:1.25rem;">
-     <p style="line-height:1.7;color:#374151;">These findings indicate that while Black Knight is highly profitable at the operational level, inefficiencies in asset utilization and the company’s leverage profile limit the extent to which profitability impacts asset and equity returns. Improving efficiency and enhancing balance sheet flexibility could likely boost overall profitability performance relative to its peers(Investopedia, n.d.-c).</p>
+     <p style="line-height:1.7;color:#374151;">These findings indicate that while Black Knight is highly profitable at the operational level, inefficiencies in asset utilization and the company’s leverage profile limit the extent to which profitability impacts asset and equity returns. Improving efficiency and enhancing balance sheet flexibility could likely boost overall profitability performance relative to its peers (Investopedia, n.d.-c).</p>
     </div>
   </div>
 </section>
@@ -548,13 +548,13 @@
     <div class="sr-box risks">
       <h3>Risks</h3>
       <ul>
-        <li><strong>Limited Liquidity Flexibility</strong> | Current and quick ratios are well below industry averages, indicating a relatively small short-term financial cushion and reliance on steady operating cash flows (Ross et al., 2022).</li>
+        <li><strong>Limited Liquidity Flexibility</strong> | Current and quick ratios are well below industry averages, indicating a relatively small short-term financial cushion and reliance on steady operating cash flows (Brooks, 2019).</li>
 
         <li><strong>Higher Leverage Than Peers</strong> | Black Knight relies more heavily on debt financing than the industry average, increasing overall financial risk.</li>
 
         <li><strong>Lower Interest Coverage</strong> | The firm’s times interest earned ratio is significantly below peer benchmarks, leaving less margin of safety if earnings decline or interest rates rise (Black Knight, Inc., 2023).</li>
 
-        <li><strong>Low Asset Utilization</strong> | Total asset turnover is well below industry norms, limiting returns on assets and equity despite strong profit margins (Damodaran, 2023).</li>
+        <li><strong>Low Asset Utilization</strong> | Total asset turnover is well below industry norms, limiting returns on assets and equity despite strong profit margins (Black Knight, Inc., 2023).</li>
 
         <li><strong>Sensitivity to Earnings Volatility</strong> | Elevated leverage and tighter liquidity increase vulnerability to short-term operational or market disruptions.</li>
       </ul>
