--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
   margin-top: 1.5rem;
   line-height: 1.7;
 }
+.inline-link {
+  color: #1f4fd8;
+  text-decoration: underline;
+  font-weight: 500;
+}
+
+.inline-link:hover {
+  text-decoration: none;
+}
 
 </style>
 
@@ -393,9 +402,11 @@
 
 <section id="ratios" class="reveal" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:2rem;">Ratio Analysis Dashboard</h3>
-<p class="ratio-note">
-  Comparative assessments are based on the Software & Programming industry ratios provided in the exhibits below.
+<p class="dashboard-subtext">
+  Comparative assessments are based on the Software &amp; Programming industry ratios provided in the
+  <a href="#exhibits" class="inline-link">exhibits section</a>.
 </p>
+
 
   <!-- Liquidity -->
   <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
