--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   line-height: 1.7;
 }
 .inline-link {
-  color: #1f4fd8;
+  color: #c9a24d;
   text-decoration: underline;
   font-weight: 500;
 }
@@ -405,6 +405,7 @@
 <p class="dashboard-subtext">
   Comparative assessments are based on the Software &amp; Programming industry ratios provided in the
   <a href="#exhibits" class="inline-link">exhibits section</a>.
+  <p style="margin-bottom:1.25rem;">
 </p>
 
 
