--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@
 <section id="dashboard" class="reveal" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:0.5rem;">Key Financial Dashboard</h3>
 
-  <p style="max-width:700px;color:#4b5563;margin-bottom:2.5rem;">
-  Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.</p>
+  <p style="max-width:700px;color:#4b5563;margin-bottom:2.5rem;">Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.</p>
 
   
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1.75rem;">
