--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 <section id="dashboard" class="reveal" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:0.5rem;">Key Financial Dashboard</h3>
 
-  <p style="max-width:700px;color:#4b5563;margin-bottom:2.5rem;">Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.</p>
+  <p style="max-width:900px;color:#4b5563;margin-bottom:2.5rem;">Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.</p>
 
   
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1.75rem;">
@@ -495,10 +495,10 @@
 
 <section id="analysis" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;color:var(--navy);">Financial Performance Analysis</h3>
-<p style="max-width:800px;color:#4b5563;margin-top:0.75rem;">
+<p style="max-width:900px;color:#4b5563;margin-top:0.75rem;">
   The following assessment synthesizes Black Knight’s ratio analysis by highlighting key financial strengths and areas of risk relative to industry benchmarks.
 </p>
-
+<p style="margin-bottom:1.25rem;">
   <div class="analysis-grid">
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Liquidity Analysis</div>
