--- a/index.html
+++ b/index.html
@@ -265,6 +265,26 @@
 .inline-link:hover {
   text-decoration: none;
 }
+.exhibit-download {
+  margin-top: 2rem;
+  padding: 1.5rem;
+  background-color: #f9fafb;
+  border-left: 4px solid #1f2937;
+  border-radius: 6px;
+  max-width: 700px;
+}
+
+.download-link {
+  display: inline-block;
+  margin-top: 0.75rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: #1f2937;
+}
+
+.download-link:hover {
+  text-decoration: underline;
+}
 
 </style>
 
@@ -659,6 +679,25 @@
       class="exhibit-image"
       onclick="openLightbox(this.src, this.alt)"
 />
+    <div class="exhibit-download">
+  <h3>Exhibit A: Ratio Calculations Spreadsheet</h3>
+
+  <p>
+    This Excel file contains the detailed ratio calculations used throughout the analysis,including liquidity, efficiency, leverage, and profitability metrics.
+  </p>
+
+  <a
+    href="exhibits/Jacquelyn_Swindell_BKI_Ratios.xlsx"
+    download
+    class="download-link"
+  >
+    📥 Download Ratio Calculations (Excel)
+  </a>
+</div>
+<p style="font-size:0.9rem;color:#4b5563;margin-top:0.5rem;">
+  Provided to support transparency and verification of financial calculations.
+</p>
+
 <p style="text-align:center;margin-top:2.5rem;">
   <a href="#dashboard" class="inline-link">↑ Back to Dashboard</a>
 </p>
