--- a/index.html
+++ b/index.html
@@ -685,12 +685,10 @@
   class="download-link"
 >
   📥 Download Ratio Calculations (Excel)
-</a>
-
+<p style="font-size:0.9rem;color:#4b5563;margin-top:0.5rem;"> Provided to support transparency and verification of financial calculations.
+ </a>
 </div>
-<p style="font-size:0.9rem;color:#4b5563;margin-top:0.5rem;">
-  Provided to support transparency and verification of financial calculations.
-</p>
+
 
 <p style="text-align:center;margin-top:2.5rem;">
   <a href="#dashboard" class="inline-link">↑ Back to Dashboard</a>
