--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <div class="kpi-card" style="border-top-color:#0f1c2e;">
         <span class="kpi-label">Industry</span>
         <span class="kpi-value" style="font-size:1.6rem;">Software & Programming</span>
-        <span class="kpi-sub">& IT Services</span>
+        <span class="kpi-sub">IT Services & Consulting</span>
       </div>
     </div>
 
